# Controle_robo_web_ponto_a_ponto

./: .gitignore  README.md  launch.sh  setup.sh  setup_udev.sh  start.sh  test_serial.py
arduino/relay_sketch/: relay_sketch.ino
controle_web/: app.py  map_service.py  requirements.txt
controle_web/controllers/: robot_controller.py  waypoint_bridge.py
controle_web/logs/: movements.txt
controle_web/static/css/: styles.css
controle_web/static/js/: client.js  gamepad.js  map.js  waypoints.js
controle_web/templates/: index.html
ros2_packages/robot_nav/: package.xml  setup.py
ros2_packages/robot_nav/config/: collision_monitor.yaml  fast_lio_mid360.yaml  mid360_config.json  nav2_params.yaml
ros2_packages/robot_nav/launch/: fast_lio.launch.py  lidar.launch.py  livox.launch.py  nav2.launch.py  nav2_collision.launch.py  play.launch.py  robot.launch.py  sim.launch.py  slam.launch.py
ros2_packages/robot_nav/robot_nav/: cmd_vel_to_wheels.py  obstacle_detector.py  odom_publisher.py  relay_controller.py  waypoint_follower.py  waypoint_recorder.py
ros2_packages/robot_nav/urdf/: robot.urdf.xacro  sim_robot.sdf
worlds/: empty.sdf
