<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_nav</name>
  <version>0.1.0</version>
  <description>Navigation and LiDAR integration for hoverboard robot</description>
  <maintainer email="user@robot.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>wheel_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fast_lio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
